meegotouchhome (0.23.16~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 22 Mar 2011 10:57:32 +0200

meegotouchhome (0.23.15-1) unstable; urgency=low

  * Fixes: NB#235408 - meegotouchhome fails to build with gcc-4.5 (-Werror)

 -- Vesa Halttunen <vesa.halttunen@nokia.comp>  Tue, 22 Mar 2011 10:56:51 +0200

meegotouchhome (0.23.14-1) unstable; urgency=low

  * Fixes: BMC#5009 - meegotouch-home points to an internal, vendor-specific bug tracker in its documentation

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 04 Mar 2011 12:47:19 +0200

meegotouchhome (0.23.13-1) unstable; urgency=low

  * Fixes: NB#233151 - homescreen is rotated 90 degrees

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 04 Mar 2011 12:46:47 +0200

meegotouchhome (0.23.12-1) unstable; urgency=low

  * Fixes: NB#226955 - Locked portrait mode breaks SDK environment

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 02 Mar 2011 17:35:25 +0200

meegotouchhome (0.23.11-1) unstable; urgency=low

  * Fixes: NB#230342 - _MEEGOTOUCH_VISIBLE_IN_SWITCHER not set

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 02 Mar 2011 14:46:57 +0200

meegotouchhome (0.23.10-1) unstable; urgency=low

  * Fixes: NB#222322 - [Harmmattan03-8]Ovi Store icon is missing after rebooting if user updated the ovi store client

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 28 Feb 2011 14:14:17 +0200

meegotouchhome (0.23.9-1) unstable; urgency=low

  * Fixes: Launcher buttons were not updated when the .desktop files were modified

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 24 Feb 2011 15:47:09 +0200

meegotouchhome (0.23.8-1) unstable; urgency=low

  * Fixes: NB#229767 - meegotouchhome crashes when tapping thumbnail

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 23 Feb 2011 19:25:22 +0200

meegotouchhome (0.23.7-1) unstable; urgency=low

  * Fixes: NB#227550 - Manage window backing pixmaps more carefully in SwitcherButtonView
